--- a/app/src/main/res/layout/fragment_my_list.xml
+++ b/app/src/main/res/layout/fragment_my_list.xml
@@ -8,6 +8,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/text_header_my_list" />
+        android:text="@string/text_header_my_list"
+        android:layout_margin="12dp"
+        android:textSize="24sp"
+        android:textStyle="bold"/>
 
 </FrameLayout>
