--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -11,35 +11,32 @@
         android:id="@+id/iv_back"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="12dp"
         android:src="@drawable/ic_back"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/text_view_all"
         android:layout_margin="12dp"
+        android:text="@string/text_view_all"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_back"
-        app:layout_constraintTop_toTopOf="@+id/iv_back"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
-        />
+        app:layout_constraintTop_toTopOf="@+id/iv_back" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_movie_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="12dp"
+        android:layout_marginStart="12dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/iv_back"
-        android:layout_marginStart="12dp"
-        android:layout_marginVertical="12dp"
-        tools:listitem="@layout/layout_movie"
         app:spanCount="3"
-        />
+        tools:listitem="@layout/item_movie" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
