--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/tv_header_view_all"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
@@ -37,6 +38,6 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/iv_back"
         app:spanCount="3"
-        tools:listitem="@layout/item_movie" />
+        tools:listitem="@layout/layout_movie" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
