--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,7 +43,7 @@
             android:src="@drawable/ic_more"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/layout_banner"
-            app:tint="@color/white" />
+            app:tint="@color/black" />
 
         <FrameLayout
             android:id="@+id/fl_now_playing"
@@ -61,7 +61,7 @@
                 android:layout_marginTop="4dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_movie" />
+                tools:listitem="@layout/layout_movie" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/pb_loading_now_playing"
@@ -99,7 +99,7 @@
             android:src="@drawable/ic_more"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fl_now_playing"
-            app:tint="@color/white" />
+            app:tint="@color/black" />
 
         <FrameLayout
             android:id="@+id/fl_popular"
@@ -117,7 +117,7 @@
                 android:layout_marginTop="4dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_movie" />
+                tools:listitem="@layout/layout_movie" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/pb_loading_popular"
@@ -155,7 +155,7 @@
             android:src="@drawable/ic_more"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fl_popular"
-            app:tint="@color/white" />
+            app:tint="@color/black" />
 
         <FrameLayout
             android:id="@+id/fl_upcoming_movies"
@@ -173,7 +173,7 @@
                 android:layout_marginTop="4dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_movie" />
+                tools:listitem="@layout/layout_movie" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/pb_loading_upcoming_movies"
@@ -211,7 +211,7 @@
             android:src="@drawable/ic_more"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fl_upcoming_movies"
-            app:tint="@color/white" />
+            app:tint="@color/black" />
 
         <FrameLayout
             android:id="@+id/fl_top_rated"
@@ -229,7 +229,7 @@
                 android:layout_marginTop="4dp"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_movie" />
+                tools:listitem="@layout/layout_movie" />
 
             <com.google.android.material.progressindicator.CircularProgressIndicator
                 android:id="@+id/pb_loading_top_rated"
