--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -64,6 +64,7 @@
                 android:text="@string/text_info"
                 android:textSize="14sp"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 app:drawableTint="@color/white"
                 app:drawableTopCompat="@drawable/ic_info"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -80,6 +81,7 @@
                 android:text="@string/text_share"
                 android:textSize="14sp"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 app:drawableTint="@color/white"
                 app:drawableTopCompat="@drawable/ic_share"
                 app:layout_constraintBottom_toBottomOf="parent"
